# gmcl_jellyfish

./: .gitmodules  LICENSE  premake5.lua
.github/workflows/: cmake.yml  main.yml
cmake/cpp/: CMakeLists.txt  CMakeSettings.json  main.cpp
source/: external.cpp  main.cpp  main.hpp  std.cpp  std.hpp  stdafx.hpp
